--- a/curriculo.html
+++ b/curriculo.html
@@ -9,7 +9,7 @@
     <h1>Jônatas Pinheiro Mendes</h1>
    <hr>
    <h1> Descrição</h1>
-   <p>Sou Jônatas tenho 17 anos e estou terminando o ensino medio.</p>
+   <p>Sou Jônatas, tenho 17 anos e estou terminando o ensino medio.</p>
    <h1>Experiencias profissonais</h1>
    <ul>
         <li>nenhuma</li>
@@ -26,7 +26,7 @@
     <footer>
         <nav>
             <ul>
-                <li><a href="mail.google.com" target="_blank">batatapbbr@gmail.com</a></li>
+                <li><a href="https://mail.google.com" target="_blank">batatapbbr@gmail.com</a></li>
                 <li><a href="#">(89)98132-3028</a></li>
                 <li><a href="https://www.facebook.com/jonatas.mendes.148" target="_blank">Saiba Mais</a></li>
 
