--- a/index/curriculo.html
+++ b/index/curriculo.html
@@ -1,12 +1,14 @@
-<html><head>
+<html>
+    <head>
+        <link href="estilo.css" rel="stylesheet"/>
     <meta charset="UTF-8">
-    <title>Jônatas</title>
-</head>
-<body>
+    <title>Jônatas</title>   
+    </head>
+    <body>
    
     <img alt="Jônatas" src="joooj 1.0.jpeg">
 
-    <h1>Jônatas Pinheiro Mendes</h1>
+   <h1>Jônatas Pinheiro Mendes</h1>
    <hr>
    <h1> Descrição</h1>
    <p>Sou Jônatas, tenho 17 anos e estou terminando o ensino medio.</p>
