--- a/index.html
+++ b/index.html
@@ -1,104 +1,43 @@
+<!DOCTYPE html>
+
 <html>
 
+<head>
+    <meta charset="UTF-8">
+    <title>Currículo</title>
+    <link rel="stylesheet" type="text/css" href="CSS/style.css" />
+</head>
 
-
-    <head>
-
-        <link href="css/estilo.css" rel="stylesheet"/>
-        <meta charset="UTF-8">
-        <title>Jônatas</title>  
-
-    </head>
-
-
-
-    <body>
-
-
-
-        <div class="foto">
-
-            <img alt="Jônatas" src="joooj 1.0.jpeg">
-
-        </div>
-
-
-
-        <div class="nome">
-
-            <h1>Jônatas Pinheiro Mendes</h1>
-
-        </div>
-
-
-
-        <div class="descricao">
-
+<body>
+    <h1>Jônatas Pinheiro Mendes</h1>
+    <img class="redondo" src="joooj 1.0.jpeg" alt="Error 404">
+    <section>
         <h3>Descrição</h3>
+        <p>Sou Jônatas, tenho 17 anos e estou terminando o ensino medio.</p>
+    </section>
 
-            <p>Sou Jônatas, tenho 17 anos e estou terminando o ensino medio.</p>
-
-        </div>
-
-        
-
-        <div class="experiencia">
-
-        <h3>Experiência Profissionais</h3>
-
+    <section>
+        <h3>Experiência/Formação</h3>
         <ul>
-
             <li>Nenhuma</li>
-
-        </ul>
-
-        </div>
-
-        
-
-        <div class="formacao">
-
-        <h3>Cursos/formação</h3>
-
-        <ul>
-
             <li>Curso de Ingles(CIP)</li>
             <li>Curso de Informatica Avançada (Casa da Cultura)</li>
             <li>Ensino medio (Informatica - Integral)</li>
             <li>Instituto Federal do Piauí</li>
             <li>Picos/PI</li>
-
         </ul>
+    </section>
 
-        </div>
-
-
-
-    </body>
-
-
-
-    <footer>
-
-
-
-        <div class="contatos">
-
-        <h3>Informações para contato: </h3>
-
-        <p>
-
+    <section>
+        <h3>Contato</h3>
+        <footer>
             <li><a href="https://mail.google.com" target="_blank">batatapbbr@gmail.com</a></li>
             <li><a href="#">(89)98132-3028</a></li>
-            <li><a href="https://www.facebook.com/jonatas.mendes.148" target="_blank">Saiba Mais</a></li>
-
-        </p>
-
-        </div>
-
-
-    </footer>
-
-
+            <br>
+            <a href="https://www.instagram.com/jonattaszen/"> <img class="imagem" src="IG.png" alt="Error 404"></a>
+            <a href="https://www.facebook.com/jonatas.mendes.148"><img class="imagem" src="FB.png" alt="Error 404"></a>
+        </footer>
+    </section>
+</body>
 
 </html>
